[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "day_01"
    , "day_02"
    , "day_02"
    , "day_03"
    , "day_04"
    , "day_05"
    , "day_06"
    , "day_07"
]


[[bin]]
name = "day_*"
path = "src/main.rs"